opam-version: "2.0"
version: "2.1"
maintainer:   "Thibaut Gudin <tgudin@besport.com>"
authors:      "Thibaut Gudin <tgudin@besport.com>"
homepage:     "git+https://github.com/besport/ocaml-gapi"
bug-reports:  "git+https://github.com/besport/ocaml-gapi/issues"
dev-repo:     "git+https://github.com/besport/ocaml-gapi"
license:      "LGPL-2.1 with OCaml linking exception"
description: "Binding to the Google API client library plugin using gen_js_api"
synopsis: "Binding to the Google API client library plugin using gen_js_api"
build: [[ "dune" "build" "-j" jobs "-p" name "@install" ]]
depends: [
  "ocaml" { >= "4.08.0" }
  "dune" {>= "2.8"}
  "gen_js_api"
  "lwt_ppx"
  ]
